[gd_scene load_steps=6 format=3 uid="uid://cwfj05q18ufm7"]

[ext_resource type="Script" uid="uid://ca351wa345yl8" path="res://script/loja.gd" id="1_lpekh"]
[ext_resource type="Texture2D" uid="uid://dm0d7a3o1da08" path="res://sprites/backloja.png" id="2_uux2s"]
[ext_resource type="Texture2D" uid="uid://dqk65xp65ehrr" path="res://sprites/19_3fb9ea35-3540-4e25-a4c9-e2f8a493f453.jpg" id="3_56hjj"]
[ext_resource type="Texture2D" uid="uid://rwmpmamid8u2" path="res://sprites/10_1200x.jpg" id="4_30e8q"]
[ext_resource type="Texture2D" uid="uid://4h8j64fo5myy" path="res://sprites/Exit.png" id="5_uux2s"]

[node name="Loja" type="Node2D"]
script = ExtResource("1_lpekh")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -209.0
offset_top = 237.0
offset_right = 2617.0
offset_bottom = 3745.0
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_uux2s")

[node name="Whey" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 625.0
offset_top = 1340.0
offset_right = 915.0
offset_bottom = 1562.0
scale = Vector2(1.5, 1.5)
text = "Boldenona - 300 coins"
icon = ExtResource("4_30e8q")
clip_text = true
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Creatina" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 630.0
offset_top = 1745.0
offset_right = 1067.0
offset_bottom = 2102.0
text = "Trembolona - 500 coins"
icon = ExtResource("3_56hjj")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="voltar" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 2010.0
offset_top = 1005.0
offset_right = 4490.0
offset_bottom = 4513.0
scale = Vector2(0.2, 0.188)
texture_normal = ExtResource("5_uux2s")

[connection signal="pressed" from="TextureRect/Whey" to="." method="_on_whey_pressed"]
[connection signal="pressed" from="TextureRect/Creatina" to="." method="_on_creatina_pressed"]
[connection signal="pressed" from="TextureRect/voltar" to="." method="_on_voltar_pressed"]
